@startuml
'https://plantuml.com/class-diagram

title US11 - Domain Model

class Person {
    name: String
    phone_number: int
    email: String
}

class DGSAdministrator {
    id_admin: int
}

class Vaccine {
    name: String
    brand: String
    technologyUsed: String
    lotNumber: String
    disease: String
}

class VaccineRegistration {
    registrationDate: DateTime
    status: String
}

Person <|-- DGSAdministrator
DGSAdministrator "1" -- "1..*" VaccineRegistration : performs
VaccineRegistration "1..*" -- "1" Vaccine : refersTo

@enduml